# pbs-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  environment.yml  params.yaml  pyproject.toml  requirements-ci.txt
.github/workflows/: main.yml
data/crises/: financial_crises_selection.csv
data/input/: .gitignore
scripts/stages/: extract.py  prepare.py  split.py
src/pbs/: __init__.py  cli.py  config.py  logger.py  utils.py
src/pbs/etl/: extraction.py  preparation.py  split.py
tests/pbs/: test_cli.py  test_init.py
tests/pbs/etl/: test_preparation.py
